--- a/new_ingredient.html
+++ b/new_ingredient.html
@@ -1,4 +1,5 @@
 
+<link href="a_stylesheet.css" rel="stylesheet"/>
 <form action="/ingredient/create" method="POST">
   <p>enter in an ingredient</p><span>Ingredient Name</span>
   <input type="text" name="ingredient"/><span>Cost</span>
